# xcb_randr_set_monitor_example

./: .gitignore  CMakeLists.txt  README.md  main.c
